--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,9 @@
   box-sizing: border-box;
   cursor: se-resize;
 }
+.react-resizable--vertical .react-resizable-handle {
+  cursor: s-resize;
+}
+.react-resizable--horizontal .react-resizable-handle {
+  cursor: e-resize;
+}
